@@ -91,7 +91,6 @@ class Main(QtWidgets.QWidget):
         self.streams, self.format_info = None, None
 
         self.widgets = Box(
-            input_file=None,
             preview=None,
             start_time=None,
             end_time=None,
@@ -99,8 +98,7 @@ class Main(QtWidgets.QWidget):
             convert_to=None,
             rotate=None,
             convert_button=None,
-            v_flip=None,
-            h_flip=None,
+            flip=None,
             crop=Box(top=None, bottom=None, left=None, right=None),
             scale=Box(width=None, height=None, keep_aspect_ratio=None),
             remove_metadata=None,
@@ -108,6 +106,7 @@ class Main(QtWidgets.QWidget):
             fast_time=None,
             pause_resume=QtWidgets.QPushButton("Pause"),
         )
+        self.buttons = []
 
         self.thumb_file = Path(self.path.work, "thumbnail_preview.png")
         self.flix = flix
@@ -143,6 +142,7 @@ class Main(QtWidgets.QWidget):
         self.grid.setSpacing(5)
         self.paused = False
 
+        self.disable_all()
         self.setLayout(self.grid)
         self.show()
         self.initialized = True
@@ -264,20 +264,20 @@ class Main(QtWidgets.QWidget):
         layout.addWidget(convert)
         return layout
 
-    def init_input_file(self):
-        layout = QtWidgets.QHBoxLayout()
-        self.widgets.input_file = QtWidgets.QLineEdit("")
-        self.widgets.input_file.setReadOnly(True)
-        open_input_file = QtWidgets.QPushButton("...")
-        open_input_file.setFixedWidth(50)
-        open_input_file.setMaximumHeight(22)
-        open_input_file.setDefault(True)
-        layout.addWidget(QtWidgets.QLabel("Source File:"))
-        layout.addWidget(self.widgets.input_file)
-        layout.addWidget(open_input_file)
-        layout.setSpacing(10)
-        open_input_file.clicked.connect(lambda: self.open_file())
-        return layout
+    # def init_input_file(self):
+    #     layout = QtWidgets.QHBoxLayout()
+    #     self.widgets.input_file = QtWidgets.QLineEdit("")
+    #     self.widgets.input_file.setReadOnly(True)
+    #     open_input_file = QtWidgets.QPushButton("...")
+    #     open_input_file.setFixedWidth(50)
+    #     open_input_file.setMaximumHeight(22)
+    #     open_input_file.setDefault(True)
+    #     layout.addWidget(QtWidgets.QLabel("Source File:"))
+    #     layout.addWidget(self.widgets.input_file)
+    #     layout.addWidget(open_input_file)
+    #     layout.setSpacing(10)
+    #     open_input_file.clicked.connect(lambda: self.open_file())
+    #     return layout
 
     def init_video_track_select(self):
         layout = QtWidgets.QHBoxLayout()
@@ -293,7 +293,7 @@ class Main(QtWidgets.QWidget):
         return layout
 
     def init_flip(self):
-        self.flip_combo_box = QtWidgets.QComboBox()
+        self.widgets.flip = QtWidgets.QComboBox()
         rotation_folder = "../data/rotations/FastFlix"
 
         no_rot_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder}.png")).resolve())
@@ -301,21 +301,21 @@ class Main(QtWidgets.QWidget):
         hoz_flip_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder} HF.png")).resolve())
         rot_180_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder} 180.png")).resolve())
 
-        self.flip_combo_box.addItems(["No Flip", "Vertical Flip", "Horizontal Flip", "Vert + Hoz Flip"])
-        self.flip_combo_box.setItemIcon(0, QtGui.QIcon(no_rot_file))
-        self.flip_combo_box.setItemIcon(1, QtGui.QIcon(vert_flip_file))
-        self.flip_combo_box.setItemIcon(2, QtGui.QIcon(hoz_flip_file))
-        self.flip_combo_box.setItemIcon(3, QtGui.QIcon(rot_180_file))
-        self.flip_combo_box.setIconSize(QtCore.QSize(35, 35))
-        self.flip_combo_box.currentIndexChanged.connect(lambda: self.page_update())
-        return self.flip_combo_box
+        self.widgets.flip.addItems(["No Flip", "Vertical Flip", "Horizontal Flip", "Vert + Hoz Flip"])
+        self.widgets.flip.setItemIcon(0, QtGui.QIcon(no_rot_file))
+        self.widgets.flip.setItemIcon(1, QtGui.QIcon(vert_flip_file))
+        self.widgets.flip.setItemIcon(2, QtGui.QIcon(hoz_flip_file))
+        self.widgets.flip.setItemIcon(3, QtGui.QIcon(rot_180_file))
+        self.widgets.flip.setIconSize(QtCore.QSize(35, 35))
+        self.widgets.flip.currentIndexChanged.connect(lambda: self.page_update())
+        return self.widgets.flip
 
     def get_flips(self):
         mapping = {0: (False, False), 1: (True, False), 2: (False, True), 3: (True, True)}
-        return mapping[self.flip_combo_box.currentIndex()]
+        return mapping[self.widgets.flip.currentIndex()]
 
     def init_rotate(self):
-        self.rotate_combo_box = QtWidgets.QComboBox()
+        self.widgets.rotate = QtWidgets.QComboBox()
         rotation_folder = "../data/rotations/FastFlix"
 
         no_rot_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder}.png")).resolve())
@@ -323,18 +323,18 @@ class Main(QtWidgets.QWidget):
         rot_270_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder} CC90.png")).resolve())
         rot_180_file = str(Path(pkg_resources.resource_filename(__name__, f"{rotation_folder} 180.png")).resolve())
 
-        self.rotate_combo_box.addItems(["No Rotation", "90°", "180°", "270°"])
-        self.rotate_combo_box.setItemIcon(0, QtGui.QIcon(no_rot_file))
-        self.rotate_combo_box.setItemIcon(1, QtGui.QIcon(rot_90_file))
-        self.rotate_combo_box.setItemIcon(2, QtGui.QIcon(rot_180_file))
-        self.rotate_combo_box.setItemIcon(3, QtGui.QIcon(rot_270_file))
-        self.rotate_combo_box.setIconSize(QtCore.QSize(35, 35))
-        self.rotate_combo_box.currentIndexChanged.connect(lambda: self.page_update())
-        return self.rotate_combo_box
+        self.widgets.rotate.addItems(["No Rotation", "90°", "180°", "270°"])
+        self.widgets.rotate.setItemIcon(0, QtGui.QIcon(no_rot_file))
+        self.widgets.rotate.setItemIcon(1, QtGui.QIcon(rot_90_file))
+        self.widgets.rotate.setItemIcon(2, QtGui.QIcon(rot_180_file))
+        self.widgets.rotate.setItemIcon(3, QtGui.QIcon(rot_270_file))
+        self.widgets.rotate.setIconSize(QtCore.QSize(35, 35))
+        self.widgets.rotate.currentIndexChanged.connect(lambda: self.page_update())
+        return self.widgets.rotate
 
     def rotation_to_transpose(self):
         mapping = {0: None, 1: 1, 2: 4, 3: 2}
-        return mapping[self.rotate_combo_box.currentIndex()]
+        return mapping[self.widgets.rotate.currentIndex()]
 
     def change_output_types(self):
         self.widgets.convert_to.clear()
@@ -400,6 +400,7 @@ class Main(QtWidgets.QWidget):
             "  Height  ", left_stretch=False, layout=new_scale_layout, return_buttons=True
         )
         self.widgets.scale.height.setDisabled(True)
+        self.widgets.scale.height.setText("Auto")
         lb.setDisabled(True)
         rb.setDisabled(True)
         QtWidgets.QPushButton()
@@ -452,12 +453,12 @@ class Main(QtWidgets.QWidget):
 
         auto_crop = QtWidgets.QPushButton("Auto")
         auto_crop.setMaximumHeight(40)
-
         auto_crop.setFixedWidth(50)
         auto_crop.setToolTip(
             "Automatically detect black borders at current start time (or at 10% in if start time is 0)"
         )
         auto_crop.clicked.connect(self.get_auto_crop)
+        self.buttons.append(auto_crop)
 
         # crop_bottom_layout.addWidget(label)
         l2 = QtWidgets.QVBoxLayout()
@@ -523,7 +524,8 @@ class Main(QtWidgets.QWidget):
                 self.page_update(),
             ]
         )
-
+        self.buttons.append(minus_button)
+        self.buttons.append(plus_button)
         if not time_field:
             widget.setFixedWidth(45)
         else:
@@ -626,7 +628,9 @@ class Main(QtWidgets.QWidget):
         if not self.input_video or not self.initialized or self.loading_video:
             return
         start_pos = self.start_time or self.initial_duration // 10
-        r, b, l, t = self.flix.get_auto_crop(self.input_video, self.video_width, self.video_height, start_pos)
+        r, b, l, t = self.flix.get_auto_crop(
+            self.input_video, self.video_width, self.video_height, start_pos, self.original_video_track
+        )
         # Hack to stop thumb gen
         self.loading_video = True
         self.widgets.crop.top.setText(str(t))
@@ -658,6 +662,7 @@ class Main(QtWidgets.QWidget):
 
     def keep_aspect_update(self):
         keep_aspect = self.widgets.scale.keep_aspect.isChecked()
+
         if keep_aspect:
             self.widgets.scale.height.setText("Auto")
         else:
@@ -666,7 +671,12 @@ class Main(QtWidgets.QWidget):
                 assert scale_width > 0
             except (ValueError, AssertionError):
                 self.scale_updating = False
+                if self.widgets.scale.height.text() == "Auto":
+                    self.widgets.scale.height.setText("-1")
                 return logger.warning("Invalid width")
+
+            if self.initial_video_height == 0 or self.initial_video_width == 0:
+                return logger.warning("Input video does not exist or has 0 dimension")
 
             ratio = self.initial_video_height / self.initial_video_width
             scale_height = ratio * scale_width
@@ -676,6 +686,30 @@ class Main(QtWidgets.QWidget):
                 logger.info(f"Have to adjust scale height by {mod} pixels")
             self.widgets.scale.height.setText(str(int(scale_height)))
         self.scale_update()
+
+    def disable_all(self):
+        for name, widget in self.widgets.items():
+            if isinstance(widget, dict):
+                for sub_widget in widget.values():
+                    if isinstance(sub_widget, QtWidgets.QWidget):
+                        sub_widget.setDisabled(True)
+            elif isinstance(widget, QtWidgets.QWidget):
+                widget.setDisabled(True)
+        for button in self.buttons:
+            button.setDisabled(True)
+
+    def enable_all(self):
+        for name, widget in self.widgets.items():
+            if isinstance(widget, dict):
+                for sub_widget in widget.values():
+                    if isinstance(sub_widget, QtWidgets.QWidget):
+                        sub_widget.setDisabled(False)
+            elif isinstance(widget, QtWidgets.QWidget):
+                widget.setDisabled(False)
+        for button in self.buttons:
+            button.setDisabled(False)
+        if self.widgets.scale.keep_aspect.isChecked():
+            self.widgets.scale.height.setDisabled(True)
 
     @reusables.log_exception("fastflix", show_traceback=False)
     def scale_update(self):
@@ -871,6 +905,7 @@ class Main(QtWidgets.QWidget):
             self.widgets.video_title.setText("")
 
         self.video_options.new_source()
+        self.enable_all()
         self.widgets.convert_button.setDisabled(False)
         self.widgets.convert_button.setStyleSheet("background-color:green;")
         self.loading_video = False
@@ -951,6 +986,7 @@ class Main(QtWidgets.QWidget):
             output=self.thumb_file,
             filters=filters,
             start_time=preview_place,
+            input_track=self.original_video_track,
         )
         try:
             self.thumb_file.unlink()
@@ -1126,6 +1162,7 @@ class Main(QtWidgets.QWidget):
         self.converting = True
         for command in commands:
             self.worker_queue.put(("command", command.command, self.path.temp_dir, command.shell))
+        self.disable_all()
         self.video_options.setCurrentWidget(self.video_options.status)
 
     @reusables.log_exception("fastflix", show_traceback=False)
@@ -1133,6 +1170,7 @@ class Main(QtWidgets.QWidget):
         self.widgets.convert_button.setStyleSheet("background-color:green;")
         self.converting = False
         self.paused = False
+        self.self.enable_all()
         self.widgets.convert_button.setText("Convert 🎥")
         self.widgets.pause_resume.setDisabled(True)
         self.widgets.pause_resume.setText("Pause")
@@ -1155,6 +1193,7 @@ class Main(QtWidgets.QWidget):
         self.widgets.convert_button.setStyleSheet("background-color:green;")
         self.converting = False
         self.paused = False
+        self.enable_all()
         self.widgets.convert_button.setText("Convert 🎥")
         self.widgets.pause_resume.setDisabled(True)
         self.widgets.pause_resume.setText("Pause")
