@@ -5,9 +5,12 @@
 * Adding ETA and size estimates on status panel
 * Adding custom x265-params options
 * Changing height to say "Auto" when keeping aspect ratio
+* Changing that buttons will be disabled without video or when encoding
 * Fixing cover extraction could timeout and crash program
 * Fixing #89 x265 params for hdr10 changed names (thanks to SlashX)
 * Fixing #92 cannot start FastFlix on Mac (thanks to Paul Bakaus)
+* Fixing autocrop sometimes failing due to muxing size limitations
+* Fixing thumbnail generation did not work for videos with multiple video tracks
 
 ## Version  3.2.1
 
